<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalpmi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.finalpmi.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" >
        <action
            android:id="@+id/action_nav_users_to_nav_usersadd"
            app:destination="@id/nav_usersadd" />
    </fragment>
    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.finalpmi.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" >
        <action
            android:id="@+id/action_nav_groups_to_createGroupFragment"
            app:destination="@id/createGroupFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.example.finalpmi.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.finalpmi.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.finalpmi.ui.profile.ProfileFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_profile" >

        <action
            android:id="@+id/action_nav_profile_to_profileEditFragment"
            app:destination="@id/profileEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_usersadd"
        android:name="com.example.finalpmi.ui.users.UsersAddFragment"
        android:label="Agregar usuarios"
        tools:layout="@layout/fragment_users_add" />
    <fragment
        android:id="@+id/createGroupFragment"
        android:name="com.example.finalpmi.ui.groups.CreateGroupFragment"
        android:label="Crear grupo"
        tools:layout="@layout/fragment_create_group" >

        <action
            android:id="@+id/action_createGroupFragment_to_usersAddGroupFragment"
            app:destination="@id/usersAddGroupFragment" />
    </fragment>
    <fragment
        android:id="@+id/usersAddGroupFragment"
        android:name="com.example.finalpmi.ui.users.UsersAddGroupFragment"
        android:label="Agregar usuarios a grupo"
        tools:layout="@layout/fragment_addusersgroups" />
    <fragment
        android:id="@+id/profileEditFragment"
        android:name="com.example.finalpmi.ui.profile.ProfileEditFragment"
        android:label="Editar usuario"
        tools:layout="@layout/fragment_profile_edit" />


</navigation>